OSR methods may not be recompiled at proper compilation level after deoptimization

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • 7
    • b04
    • generic
    • generic

        This bug may prevent methods that have been deoptimized from being recompiled at the proper level.

        In remove_osr_nmethod we are trying to find the highest comp level by iterating though all linked osr-nmethods. But the code fails to take into account that the chained OSR-nmethods may belong to any nmethod in that class, not just that nmethod (as is the case for non-OSR nmethods.)

        This bug has been present since the integration of tiered compilation.

        Impact: May cause loss of performance
        Likelihood: Unknown, but probably not uncommon in scenarios with lots of deopts.
        Workaround: Turn of tiered-compilation, but that will probably hurt performance even more.

              Assignee:
              Nils Eliasson (Inactive)
              Reporter:
              Nils Eliasson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: