8034188: OSR methods may not be recompiled at proper compilation level

Remove_osr_nmethod doesn't check that it is the correct method

Reviewed-by: kvn, iveresov